# rcs-blame-snapshots

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  VERSION  aclocal.m4  blame.spec  blame.spec.in  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in  blame.1
lib/: Makefile.am  Makefile.in  ansi2knr.c  argp-fmtstream.c  argp-fmtstream.h  argp-help.c  argp-parse.c  argp-pin.c  argp.h  canonicalize.c  error.h  filenamecat.c  getcwd.c  getopt.c  getopt_int.h  mbuiter.h  mempcpy.h  mktime.c  obstack.c  obstack.h  strcasecmp.c  strchrnul.c  strchrnul.h  strnlen.h  strnlen1.c  vasnprintf.h  xalloc.h  xreadlink.c
m4/: argp.m4  canonicalize.m4  eealloc.m4  extensions.m4  filenamecat.m4  getcwd-abort-bug.m4  getcwd-path-max.m4  getcwd.m4  getdelim.m4  getline.m4  getopt.m4  gnulib-comp.m4  gnulib.m4  langinfo.m4  mbchar.m4  mempcpy.m4  mktime.m4  pathmax.m4  setenv.m4  stdbool.m4  strchrnul.m4  strdup.m4  strftime.m4  strndup.m4  strnlen.m4  time_r.m4  unlocked-io.m4  vsnprintf.m4  wcwidth.m4
package/: blame.spec
package/debian/: changelog  control  copyright  lintian-overrides  rules  rules.old  watch
src/: Makefile.am  Makefile.in  blame.c  data.h  date.c  date.h  delta.c  delta.h  hash.c  hash.h  keyword.c  keyword.h  lexer.c  lexer.l  lines.c  lines.h  parser.c  parser.h  parser.y  rcs.c  rcs.h  system.h  util.c  util.h  vector.c  vector.h  working.c  working.h
tests/: Makefile.am  Makefile.in  argv.at  atlocal.in  author.at  blame  branch.at  date.at  expand.at  log.at  mixed.at  package.m4  pairing.at  rcs.at  rcsinit.at  rev.at  state.at  suffixes.at  testsuite  testsuite.at  version.at  working.at
tests/testdata/: binary,v  binary-1.2.expout  binary.experr  compat,v  compat-1.1.expout  compat-1.2.expout  compat.experr  complex,v  complex-1.1.expout  complex-1.2.1.1.1.1.expout  complex-1.2.1.1.expout  complex-1.2.1.2.expout  complex-1.2.1.3.expout  complex-1.4.expout  complex-2.2.expout  complex-3.4.expout  complex-3.8.expout  complex.experr  empty,v  escape,v  escape-1.2.expout  escape.experr  keywords,v  keywords.experr  log,v  log-1.2.expout  log-v3-1.1.expout  log-v3.expout  log-v5-1.1.expout  log.experr  simple-1.1.expout  simple-1.2.expout  simple.experr
tests/testdata/CVS/: Entries  Repository  Root
tests/testdata/RCS/: file3-bar
tests/testdata/RCS/CVS/: Entries  Repository
